fix overflow App

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,7 +6,7 @@
   margin: 0 auto;
   color: var(--appFontColor);
   box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.35);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .active {
